<resources>
    <string name="app_name">CS4520_InClass_Ziyang8317</string>
    <string name="BMI_Title">Body Mass Index(BMI)</string>
    <string name="inclass01_button">InClass01</string>
    <string name="weight_Title">Weight</string>
    <string name="weight_Reminder">Your weight in pounds</string>
    <string name="weight_unit">lb</string>
    <string name="height_Title">Height</string>
    <string name="feet_hint">Enter feet here</string>
    <string name="inch_hint">Enter inches here</string>
    <string name="feet_unit">feet</string>
    <string name="inches_unit">inches</string>
    <string name="button_calculate">Calculate BMI</string>
    <string name="text_result">Click on Calculate BMI to find your BMI</string>
    <string name="button_inclass2">INCLASS02</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="I_Use">I use</string>
    <string name="radioButton_Android">Android</string>
    <string name="radioButton_iOS">iOS</string>
    <string name="mood_reminder">Your current mood:</string>
    <string name="button_submit">Submit</string>
    <string name="mood_result">Angry</string>
    <string name="select_avatar_reminder">Select your Avatar</string>
    <string name="Name_Tag">Name:</string>
    <string name="Email_Tag">Email:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_class4">InClass04</string>
    <string name="selectComplexityReminder">Select Complexity:</string>
    <string name="minimumTitle">Minimum:</string>
    <string name="maximumReminder">Maximum:</string>
    <string name="averageTitle">Average:</string>
    <string name="buttonGenerateNum">Generate Number</string>
    <string name="selectedComplexity">1 times</string>
    <string name="keyword_hint">Search Keyword</string>
    <string name="buttonGoText">Go</string>
    <string name="news_keywords_reminder">Please select at least one of the two following fields:</string>
    <string name="InClass07Title">Note Application</string>
    <string name="buttonLogin">Log in</string>
    <string name="buttonRegister">Register</string>
    <string name="InClass07RegisterTitle">Register New Account</string>
    <string name="InClass07LoginTitle">Log in</string>
    <string name="InClass_Login_password_reminder">Password:</string>
    <string-array name="country_spinner_items">
        <item>China</item>
        <item>Japan</item>
        <item>India</item>
        <item>United States</item>
        <item>France</item>
        <item>Russia</item>
    </string-array>
    <string-array name="category_spinner_items">
        <item>Business</item>
        <item>Entertainment</item>
        <item>General</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>


</resources>